Fix width of expand/collapse markers

--- a/content/assets/admin.css
+++ b/content/assets/admin.css
@@ -314,6 +314,8 @@ button:hover {
 }
 
 .image-list h4::before {
+    display: inline-block;
+    width: 1.5em;
     font-size: 70%;
     content: "▼ "
 }
